--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,18 @@
+body{
+  background:  #dcd6f7;
+}
 
+a{
+  color: #424874;
+}
 .App-header {
   display: flex;
   align-items: center;
   gap: 10px;
   padding: 20px;
-  background-color: #282c34;
+  background-color: #424874;
   color: white;
+
 }
 
 .footer{
